Fixes #5, used local version of the headline font
Downloaded Bevan from Google Fonts to load locally. I didn't really notice too much of a difference in testing but it's definitely better to do than not.

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -4,3 +4,10 @@
   font-weight: 400;
   src: local('Titillium Web'), local('TitilliumWeb-Regular'), url(../fonts/TitilliumWeb-Regular.ttf) format('truetype');
 }
+
+@font-face {
+  font-family: 'Bevan';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Bevan'), local('Bevan'), url(../fonts/Bevan.ttf) format('truetype');
+}
